--- a/app/admin/templates/pages/student-applications/studentinfo.html
+++ b/app/admin/templates/pages/student-applications/studentinfo.html
@@ -26,26 +26,27 @@
                             font-size: 13px; color: white;">Student's Personal Detail</div>
                             <!-- student's detail -->
                             <div class="student">
-                                <div class="row">
-                                    <div class="col-md-4 col-lg-4">
-                                        <div class="gal-detail thumb ">
-                                            <h5>Passport Size Photo</h5>
-                                            <a href="{{ std.half_photo }}" class="image-popup"
-                                                title="Passport Size Photo">
-                                                <img src="{{ std.half_photo }}" class="thumb-img-mark" width="200"
-                                                    height="150" alt="Passport Size Image">
-                                            </a>
-
+                                <div class="container mt-3">
+                                    <div class="row d-flex justify-content-center"> 
+                                        <div class="col-md-3"> 
+                                            <div class="card p-3 py-1">     
+                                                <div class="text-center">
+                                                    <a href="{{ std.half_photo }}" class="image-popup" title="Passport Size Photo">
+                                                        <img src="{{ std.half_photo }}" width="150px" height="130px" class="rounded-circle">
+                                                    </a>
+                                                </div>
+                                            </div> 
                                         </div>
-                                    </div>
-
-                                </div>
-                                <hr>
+                                    </div>  
+                                </div> <hr>
+                                
                                 <div class="row ">
-                                    <div class="col-sm-4 form-group">
-                                        <label for="cid">CID:</label>
+                                    <div class="col-md-4 form-group row">
+                                        <label for="cid" class="control-label col-md-4">CID:</label>
+                                        <div class="col-md-4">
                                         <input type="text" class="form-control" value="{{std.student_cid}}" name="cid"
                                             id="cid" disabled>
+                                            </div>
                                     </div>
                                     <div class="col-sm-4 form-group">
                                         <label>First Name:</label>
