--- a/app/admin/templates/pages/student-applications/studentinfo.html
+++ b/app/admin/templates/pages/student-applications/studentinfo.html
@@ -23,16 +23,20 @@
                   <!-- Nav pills -->
                   <ul class="nav nav-pills justify-content-center nav-justified" role="tablist">
                      <li class="nav-item">
-                        <a class="nav-link active btn btn-primary" data-toggle="pill" href="#studentDetail">Student Detail</a>
+                        <hr class="horizontal"/>
+                        <a class="nav-link active btn btn-primary" class="btn  btn-xl" data-toggle="pill" href="#studentDetail">Student Detail</a> 
+                     </li> 
+                     <li class="nav-item">
+                        <hr class="horizontal"/>
+                        <a class="nav-link btn btn-primary" class="btn  btn-xl" data-toggle="pill" href="#academicDetail">Academic Detail</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link btn btn-primary" data-toggle="pill" href="#academicDetail">Academic Detail</a>
-                        <li class="nav-item">
-                            <a class="nav-link btn btn-primary" data-toggle="pill" href="#parent-detail">Parents Detail</a>
-                         </li>
+                        <hr class="horizontal"/>
+                        <a class="nav-link btn btn-primary" class="btn  btn-xl" data-toggle="pill" href="#parent-detail">Parents Detail</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link btn btn-primary" data-toggle="pill" href="#actions">Action</a>
+                        <a class="nav-link btn btn-primary" class="btn  btn-xl" data-toggle="pill" href="#actions">Action</a>
+
                      </li>
                   </ul>
                   <div class="connected-line"></div>
